--- a/Pulse/Providers/wallbase/wallhaven.csproj
+++ b/Pulse/Providers/wallbase/wallhaven.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{921F5326-5B28-462D-8220-3D3507438C27}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>wallbase</RootNamespace>
-    <AssemblyName>wallbase</AssemblyName>
+    <RootNamespace>wallhaven</RootNamespace>
+    <AssemblyName>wallhaven</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -37,6 +37,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CsQuery">
+      <HintPath>..\..\packages\CsQuery.1.3.4\lib\net40\CsQuery.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -83,9 +86,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\wallbasefav.gif" />
-  </ItemGroup>
-  <ItemGroup>
+    <None Include="packages.config" />
     <None Include="Resources\favicon.ico" />
   </ItemGroup>
   <ItemGroup>
